<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@mipmap/orange_background">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/player1"
        android:id="@+id/player1"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/player2"
        android:id="@+id/player2"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/player3"
        android:id="@+id/player3"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/player4"
        android:id="@+id/player4"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/xishti_input"
        android:inputType="number"
        android:id="@+id/xishti"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/premiaze"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/moshla"
            android:textOn="@string/moshla"
            android:id="@+id/moshla"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/gaormageba"
            android:textOn="@string/gaormageba"
            android:id="@+id/gaormageba"
            android:background="@color/gray"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="45dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:layout_gravity="center"
        android:background="@color/button_blue"
        android:id="@+id/beginButton"/>

</androidx.appcompat.widget.LinearLayoutCompat>