<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity"
    android:background="@mipmap/blue_background"
    android:padding="40dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/light_yellow"
            android:layout_marginBottom="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:id="@+id/loginEmail"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:id="@+id/loginPassword"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="45dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:layout_gravity="center"
            android:background="@color/button_blue"
            android:id="@+id/loginButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/light_yellow"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/light_yellow"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:id="@+id/registerEmail"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:id="@+id/registerPassword"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="45dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:layout_gravity="center"
            android:background="@color/button_blue"
            android:id="@+id/registerButton"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>